Set language select to a fixed height to prevent resizing when appHeader resizes due to overflow.

--- a/to-do-list/src/App.css
+++ b/to-do-list/src/App.css
@@ -84,7 +84,7 @@ html {
 }
 
 .select.languageSelect {
-  height: 100%;
+  height: 1.8rem;
   margin-right: 0.3rem;
   background-color: transparent;
   box-shadow: none;
